--- a/funtome-paki-card.html
+++ b/funtome-paki-card.html
@@ -52,7 +52,7 @@
                         </a>
                     </div>
 
-                    <div class="nav">
+                    <div class="nav" id="nav">
                         <ul class="nav-list">
                             <li class="link-home">
                                 <a href="index.html">главная</a>
@@ -719,6 +719,20 @@
                 parent.addClass('style-message');
             }
         }
+    </script>
+
+    <!--Nav Toggle  -->
+    <script>
+        $(document).ready(function () {
+            let nav = $('#nav');
+
+            $('#navToggle').on('click', function(event){
+                event.preventDefault();
+
+                nav.toggleClass('show');
+                
+            });
+        });
     </script>
 
 </body>
