--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -46,7 +46,7 @@
                         </a>
                     </div>
 
-                    <div class="nav">
+                    <div class="nav" id="nav">
                         <ul class="nav-list">
                             <li class="link-home">
                                 <a href="index.html">главная</a>
@@ -468,6 +468,20 @@
                 }
 
                     });
+        });
+    </script>
+
+    <!--Nav Toggle  -->
+    <script>
+        $(document).ready(function () {
+            let nav = $('#nav');
+
+            $('#navToggle').on('click', function(event){
+                event.preventDefault();
+
+                nav.toggleClass('show');
+                
+            });
         });
     </script>
 
