--- a/funtome_support.html
+++ b/funtome_support.html
@@ -47,7 +47,7 @@
                         </a>
                     </div>
 
-                    <div class="nav">
+                    <div class="nav" id="nav">
                         <ul class="nav-list">
                             <li class="link-home">
                                 <a href="index.html">главная</a>
@@ -255,6 +255,20 @@
                 // 'autoplayTimeout': 3000,
                 'autoplayHoverPause': true,
                 'nav': true,
+            });
+        });
+    </script>
+
+    <!--Nav Toggle  -->
+    <script>
+        $(document).ready(function () {
+            let nav = $('#nav');
+
+            $('#navToggle').on('click', function(event){
+                event.preventDefault();
+
+                nav.toggleClass('show');
+                
             });
         });
     </script>
