--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </a>
                     </div>
 
-                    <div class="nav">
+                    <div class="nav" id="nav">
                         <ul class="nav-list">
                             <li class="link-home">
                                 <a href="index.html">главная</a>
@@ -328,6 +328,21 @@
             video.play();
             play.style.display = 'none';
             }
+        });
+    </script>
+
+
+    <!--Nav Toggle  -->
+    <script>
+        $(document).ready(function () {
+            let nav = $('#nav');
+
+            $('#navToggle').on('click', function(event){
+                event.preventDefault();
+
+                nav.toggleClass('show');
+                
+            });
         });
     </script>
 
