--- a/funtome-paki-card.html
+++ b/funtome-paki-card.html
@@ -23,14 +23,13 @@
     <link rel="stylesheet" href="css/home/style.css">
     <link rel="stylesheet" href="css/home/media-style.css">
 
+    <!-- Style CSS + media paki-card -->
+    <link rel="stylesheet" href="css/paki/style-funtome-paki-card.css">
+    <link rel="stylesheet" href="css/paki/media-style-funtome-paki-card.css">
 
     <!-- Style CSS + media paki -->
     <link rel="stylesheet" href="css/paki/style-funtome-paki.css">
     <link rel="stylesheet" href="css/paki/media-style-funtome-paki.css">
-
-    <!-- Style CSS + media paki-card -->
-    <link rel="stylesheet" href="css/paki/style-funtome-paki-card.css">
-    <link rel="stylesheet" href="css/paki/media-style-funtome-paki-card.css">
     
 
 </head>
@@ -93,8 +92,8 @@
                 <div class="features-container">
 
                     <div class="title-card">
-                        <div class="title-red">Классические паки</div>
-                        <div class="title-green">Зверуш</div>
+                        <div class="title-red"><span>Классические паки</span></div>
+                        <div class="title-green">зверуш зверуш зверуш зверуш зверуш зверуш</div>
                         <div class="content-text-paki">20 000+ загрузок</div>
                     </div>
                     
@@ -114,120 +113,121 @@
         <!-- Content block -->
         <div class="content-block">
             <div class="container">
+                <div class="box-container">
+                    <div class="paki-box">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
+                        </div>
 
-                <div class="paki-box">
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
                         </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
 
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
                         </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
 
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
                         </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
 
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
                         </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
 
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
                         </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
 
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                        <div class="paki-blank">
+                            <div class="photo-blank">
+                                <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
+                            </div>
+                            <div class="title-blank">
+                                <div class="name-blank">Думаю о тебе</div>
+                                <ul class="emotions">
+                                    <li class="emotions-list">думаю о тебе</li>
+                                    <li class="emotions-list">мысли о тебе</li>
+                                    <li class="emotions-list">мысли о любви</li>
+                                    <li class="emotions-list">зверуш влюблен</li>
+                                </ul>
+                                <div class="options">+4 варианта</div>
+                            </div>
                         </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
-
-                    <div class="paki-blank">
-                        <div class="photo-blank">
-                            <img class="photo-blank-style" src="/img/funtome-paki-card/pak.png" alt="">
-                        </div>
-                        <div class="title-blank">
-                            <div class="name-blank">Думаю о тебе</div>
-                            <ul class="emotions">
-                                <li class="emotions-list">думаю о тебе</li>
-                                <li class="emotions-list">мысли о тебе</li>
-                                <li class="emotions-list">мысли о любви</li>
-                                <li class="emotions-list">зверуш влюблен</li>
-                            </ul>
-                            <div class="options">+4 варианта</div>
-                        </div>
-                    </div>
-                </div> <!-- paki-box -->
+                    </div> <!-- paki-box -->
+                </div>    
 
                 <div class="slider-box">
                     <p class="slider-title">Pекомендуем наши Xиты</p>
@@ -663,6 +663,23 @@
                 'loop': true,
                 /* 'autoplayHoverPause': true, */
                 'nav': true,
+
+                'responsive':{ //Адаптация в зависимости от разрешения экрана
+                    0:{
+                        items:1
+                    },
+
+                    768:{
+                        items:2
+                    },
+
+                    1231:{ items:3
+                    },
+
+                    1281:{
+                        items:4
+                    }
+                }
             });
         });
     </script>
