Add text mobile

--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -81,6 +81,7 @@
 
         <!--- Intro -->
         <div class="intro blog">
+            <div class="border-box"></div>
 
             <div class="container">
                 <div class="blog-container">
@@ -92,10 +93,9 @@
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
                         </div>
-                        <div class="content-text">Горячие новости из вселенной Funtome!<br>Только здесь и только для
-                            тебя!
-                        </div>
-
+                    </div>
+                    <div class="content-text">Горячие новости из вселенной Funtome!<br>Только здесь и только для
+                        тебя!
                     </div>
                 </div>
             </div>
