--- a/funtome_features.html
+++ b/funtome_features.html
@@ -82,7 +82,7 @@
 
         <!--- Intro -->
         <div class="intro features">
-
+            <div class="border-box"></div>
             <div class="container">
                 <div class="features-container">
 
@@ -93,8 +93,8 @@
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
                         </div>
-                        <div class="content-text">Узнайте о самых полезных<br class="tabl"> и необычных <br class="desc"> функциях приложения!</div>
                     </div>
+                    <div class="content-text">Узнайте о самых полезных<br class="tabl"> и необычных <br class="desc"> функциях приложения!</div>
 
                 </div>
             </div>
