--- a/funtome_paki.html
+++ b/funtome_paki.html
@@ -80,6 +80,7 @@
 
         <!--- Intro -->
         <div class="intro paki">
+            <div class="border-box"></div>
 
             <div class="container">
                 <div class="features-container">
@@ -91,8 +92,9 @@
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
                         </div>
-                        <div class="content-text">Забавные и серьезные, милые и зловещие,<br> будничные и праздничные! Такие разные паки<br> Funtome. Найди тот, что подходит тебе!</div>
                     </div>
+
+                    <div class="content-text">Забавные и серьезные, милые и зловещие,<br> будничные и праздничные! Такие разные паки<br> Funtome. Найди тот, что подходит тебе!</div>
 
                 </div>
             </div>
@@ -106,7 +108,7 @@
         </div> 
 
         <!-- Content block -->
-        <div class="content-block">
+        <div class="content-block paki-margin">
             <div class="container">  
 
                 <div class="block-menu-bar">
