--- a/funtome_support.html
+++ b/funtome_support.html
@@ -82,6 +82,7 @@
 
         <!--- Intro -->
         <div class="intro support">
+            <div class="border-box"></div>
 
             <div class="container">
                 <div class="features-container">
@@ -93,8 +94,8 @@
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
                         </div>
-                        <div class="content-text">Мы всегдя рядом!</div>
                     </div>
+                    <div class="content-text">Мы всегдя рядом!</div>
                 </div>
             </div>
 
