--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
         <!--- Intro -->
         <div class="intro home">
+            <div class="border-box"></div>
 
             <div class="container">
                 <div class="intro-container">
